--- a/docker/app-manager/catalog/nifi/templates/PrometheusToOpenmetricsTransformer.xml
+++ b/docker/app-manager/catalog/nifi/templates/PrometheusToOpenmetricsTransformer.xml
@@ -1,17 +1,42 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <template encoding-version="1.3">
     <description></description>
-    <groupId>6f48f7cf-017c-1000-cd66-de536a7d888b</groupId>
+    <groupId>2e47880d-017d-1000-468e-c1eb796b2a8b</groupId>
     <name>PrometheusToOpenmetricsTransformer</name>
     <snippet>
         <connections>
-            <id>3578bc8e-7d1c-351b-0000-000000000000</id>
-            <parentGroupId>059fa68e-15d4-3c94-0000-000000000000</parentGroupId>
+            <id>0470d77d-015f-3bc2-0000-000000000000</id>
+            <parentGroupId>c2b12d08-03b0-3b3d-0000-000000000000</parentGroupId>
             <backPressureDataSizeThreshold>1 GB</backPressureDataSizeThreshold>
             <backPressureObjectThreshold>10000</backPressureObjectThreshold>
             <destination>
-                <groupId>059fa68e-15d4-3c94-0000-000000000000</groupId>
-                <id>731e780d-fe93-3ab0-0000-000000000000</id>
+                <groupId>c2b12d08-03b0-3b3d-0000-000000000000</groupId>
+                <id>fde8df86-f8e5-3e01-0000-000000000000</id>
+                <type>PROCESSOR</type>
+            </destination>
+            <flowFileExpiration>0 sec</flowFileExpiration>
+            <labelIndex>1</labelIndex>
+            <loadBalanceCompression>DO_NOT_COMPRESS</loadBalanceCompression>
+            <loadBalancePartitionAttribute></loadBalancePartitionAttribute>
+            <loadBalanceStatus>LOAD_BALANCE_NOT_CONFIGURED</loadBalanceStatus>
+            <loadBalanceStrategy>DO_NOT_LOAD_BALANCE</loadBalanceStrategy>
+            <name></name>
+            <selectedRelationships>FAILURE</selectedRelationships>
+            <source>
+                <groupId>c2b12d08-03b0-3b3d-0000-000000000000</groupId>
+                <id>b749c1c6-c50b-3a89-0000-000000000000</id>
+                <type>PROCESSOR</type>
+            </source>
+            <zIndex>0</zIndex>
+        </connections>
+        <connections>
+            <id>e7c19b1c-7673-3160-0000-000000000000</id>
+            <parentGroupId>c2b12d08-03b0-3b3d-0000-000000000000</parentGroupId>
+            <backPressureDataSizeThreshold>1 GB</backPressureDataSizeThreshold>
+            <backPressureObjectThreshold>10000</backPressureObjectThreshold>
+            <destination>
+                <groupId>c2b12d08-03b0-3b3d-0000-000000000000</groupId>
+                <id>e0801957-41b2-394e-0000-000000000000</id>
                 <type>PROCESSOR</type>
             </destination>
             <flowFileExpiration>0 sec</flowFileExpiration>
@@ -23,20 +48,20 @@
             <name></name>
             <selectedRelationships>SUCCESS</selectedRelationships>
             <source>
-                <groupId>059fa68e-15d4-3c94-0000-000000000000</groupId>
-                <id>a3540ee3-ed0f-399b-0000-000000000000</id>
+                <groupId>c2b12d08-03b0-3b3d-0000-000000000000</groupId>
+                <id>b749c1c6-c50b-3a89-0000-000000000000</id>
                 <type>PROCESSOR</type>
             </source>
             <zIndex>0</zIndex>
         </connections>
         <connections>
-            <id>a08ce039-b3ac-38aa-0000-000000000000</id>
-            <parentGroupId>059fa68e-15d4-3c94-0000-000000000000</parentGroupId>
+            <id>f8ad6ae9-c092-32c7-0000-000000000000</id>
+            <parentGroupId>c2b12d08-03b0-3b3d-0000-000000000000</parentGroupId>
             <backPressureDataSizeThreshold>1 GB</backPressureDataSizeThreshold>
             <backPressureObjectThreshold>10000</backPressureObjectThreshold>
             <destination>
-                <groupId>059fa68e-15d4-3c94-0000-000000000000</groupId>
-                <id>a3540ee3-ed0f-399b-0000-000000000000</id>
+                <groupId>c2b12d08-03b0-3b3d-0000-000000000000</groupId>
+                <id>b749c1c6-c50b-3a89-0000-000000000000</id>
                 <type>PROCESSOR</type>
             </destination>
             <flowFileExpiration>0 sec</flowFileExpiration>
@@ -48,15 +73,15 @@
             <name></name>
             <selectedRelationships>success</selectedRelationships>
             <source>
-                <groupId>059fa68e-15d4-3c94-0000-000000000000</groupId>
-                <id>6918d72d-5956-3e0e-0000-000000000000</id>
+                <groupId>c2b12d08-03b0-3b3d-0000-000000000000</groupId>
+                <id>4e882055-720b-35ba-0000-000000000000</id>
                 <type>PROCESSOR</type>
             </source>
             <zIndex>0</zIndex>
         </connections>
         <processors>
-            <id>6918d72d-5956-3e0e-0000-000000000000</id>
-            <parentGroupId>059fa68e-15d4-3c94-0000-000000000000</parentGroupId>
+            <id>4e882055-720b-35ba-0000-000000000000</id>
+            <parentGroupId>c2b12d08-03b0-3b3d-0000-000000000000</parentGroupId>
             <position>
                 <x>0.0</x>
                 <y>0.0</y>
@@ -326,11 +351,63 @@
             <type>org.apache.nifi.processors.kafka.pubsub.ConsumeKafka_2_6</type>
         </processors>
         <processors>
-            <id>731e780d-fe93-3ab0-0000-000000000000</id>
-            <parentGroupId>059fa68e-15d4-3c94-0000-000000000000</parentGroupId>
+            <id>b749c1c6-c50b-3a89-0000-000000000000</id>
+            <parentGroupId>c2b12d08-03b0-3b3d-0000-000000000000</parentGroupId>
             <position>
-                <x>1272.0</x>
-                <y>16.0</y>
+                <x>664.0</x>
+                <y>0.0</y>
+            </position>
+            <bundle>
+                <artifact>nifi-prometheus2openmetrics-nar</artifact>
+                <group>upm.dit.giros</group>
+                <version>1.0</version>
+            </bundle>
+            <config>
+                <bulletinLevel>WARN</bulletinLevel>
+                <comments></comments>
+                <concurrentlySchedulableTaskCount>1</concurrentlySchedulableTaskCount>
+                <descriptors>
+                    <entry>
+                        <key>YANG-TOOLS Driver type</key>
+                        <value>
+                            <name>YANG-TOOLS Driver type</name>
+                        </value>
+                    </entry>
+                </descriptors>
+                <executionNode>ALL</executionNode>
+                <lossTolerant>false</lossTolerant>
+                <penaltyDuration>30 sec</penaltyDuration>
+                <properties>
+                    <entry>
+                        <key>YANG-TOOLS Driver type</key>
+                        <value>PrometheusToOpenmetricsTransformer</value>
+                    </entry>
+                </properties>
+                <runDurationMillis>0</runDurationMillis>
+                <schedulingPeriod>0 sec</schedulingPeriod>
+                <schedulingStrategy>TIMER_DRIVEN</schedulingStrategy>
+                <yieldDuration>1 sec</yieldDuration>
+            </config>
+            <executionNodeRestricted>false</executionNodeRestricted>
+            <name>PrometheusToOpenmetricsTransformerDriver</name>
+            <relationships>
+                <autoTerminate>false</autoTerminate>
+                <name>FAILURE</name>
+            </relationships>
+            <relationships>
+                <autoTerminate>false</autoTerminate>
+                <name>SUCCESS</name>
+            </relationships>
+            <state>STOPPED</state>
+            <style/>
+            <type>upm.dit.giros.processors.prometheus2openmetrics.PrometheusToOpenmetricsMetaDriver</type>
+        </processors>
+        <processors>
+            <id>e0801957-41b2-394e-0000-000000000000</id>
+            <parentGroupId>c2b12d08-03b0-3b3d-0000-000000000000</parentGroupId>
+            <position>
+                <x>1304.0</x>
+                <y>0.0</y>
             </position>
             <bundle>
                 <artifact>nifi-kafka-2-6-nar</artifact>
@@ -628,45 +705,71 @@
             <type>org.apache.nifi.processors.kafka.pubsub.PublishKafka_2_6</type>
         </processors>
         <processors>
-            <id>a3540ee3-ed0f-399b-0000-000000000000</id>
-            <parentGroupId>059fa68e-15d4-3c94-0000-000000000000</parentGroupId>
+            <id>fde8df86-f8e5-3e01-0000-000000000000</id>
+            <parentGroupId>c2b12d08-03b0-3b3d-0000-000000000000</parentGroupId>
             <position>
-                <x>616.0</x>
-                <y>16.0</y>
+                <x>664.0</x>
+                <y>264.0</y>
             </position>
             <bundle>
-                <artifact>nifi-prometheus2openmetrics-nar</artifact>
-                <group>upm.dit.giros</group>
-                <version>1.0</version>
+                <artifact>nifi-standard-nar</artifact>
+                <group>org.apache.nifi</group>
+                <version>1.14.0</version>
             </bundle>
             <config>
                 <bulletinLevel>WARN</bulletinLevel>
                 <comments></comments>
                 <concurrentlySchedulableTaskCount>1</concurrentlySchedulableTaskCount>
-                <descriptors/>
+                <descriptors>
+                    <entry>
+                        <key>log-level</key>
+                        <value>
+                            <name>log-level</name>
+                        </value>
+                    </entry>
+                    <entry>
+                        <key>log-prefix</key>
+                        <value>
+                            <name>log-prefix</name>
+                        </value>
+                    </entry>
+                    <entry>
+                        <key>log-message</key>
+                        <value>
+                            <name>log-message</name>
+                        </value>
+                    </entry>
+                </descriptors>
                 <executionNode>ALL</executionNode>
                 <lossTolerant>false</lossTolerant>
                 <penaltyDuration>30 sec</penaltyDuration>
-                <properties/>
+                <properties>
+                    <entry>
+                        <key>log-level</key>
+                        <value>info</value>
+                    </entry>
+                    <entry>
+                        <key>log-prefix</key>
+                    </entry>
+                    <entry>
+                        <key>log-message</key>
+                    </entry>
+                </properties>
                 <runDurationMillis>0</runDurationMillis>
                 <schedulingPeriod>0 sec</schedulingPeriod>
                 <schedulingStrategy>TIMER_DRIVEN</schedulingStrategy>
                 <yieldDuration>1 sec</yieldDuration>
             </config>
             <executionNodeRestricted>false</executionNodeRestricted>
-            <name>PrometheusToOpenmetricsDriver</name>
+            <name>LogMessage</name>
             <relationships>
                 <autoTerminate>true</autoTerminate>
-                <name>FAILURE</name>
-            </relationships>
-            <relationships>
-                <autoTerminate>false</autoTerminate>
-                <name>SUCCESS</name>
+                <name>success</name>
             </relationships>
             <state>STOPPED</state>
             <style/>
-            <type>upm.dit.giros.processors.prometheus2openmetrics.PrometheusToOpenmetricsDriver</type>
+            <type>org.apache.nifi.processors.standard.LogMessage</type>
         </processors>
     </snippet>
-    <timestamp>10/11/2021 12:29:33 UTC</timestamp>
+    <timestamp>11/17/2021 14:36:01 UTC</timestamp>
 </template>
