[C-10] Migrate NiFi variables to parameter context

--- a/docker/app-manager/catalog/nifi/templates/EVESource.xml
+++ b/docker/app-manager/catalog/nifi/templates/EVESource.xml
@@ -249,7 +249,7 @@
                 <properties>
                     <entry>
                         <key>bootstrap.servers</key>
-                        <value>${source_broker_url}</value>
+                        <value>#{source_broker_url}</value>
                     </entry>
                     <entry>
                         <key>security.protocol</key>
@@ -286,7 +286,7 @@
                     </entry>
                     <entry>
                         <key>topic</key>
-                        <value>${source_topics}</value>
+                        <value>#{source_topics}</value>
                     </entry>
                     <entry>
                         <key>topic_type</key>
@@ -298,7 +298,7 @@
                     </entry>
                     <entry>
                         <key>group.id</key>
-                        <value>${group_id}</value>
+                        <value>#{group_id}</value>
                     </entry>
                     <entry>
                         <key>auto.offset.reset</key>
@@ -644,7 +644,7 @@
                 <properties>
                     <entry>
                         <key>bootstrap.servers</key>
-                        <value>${sink_broker_url}</value>
+                        <value>#{sink_broker_url}</value>
                     </entry>
                     <entry>
                         <key>security.protocol</key>
@@ -681,7 +681,7 @@
                     </entry>
                     <entry>
                         <key>topic</key>
-                        <value>${sink_topic}</value>
+                        <value>#{sink_topic}</value>
                     </entry>
                     <entry>
                         <key>acks</key>
