--- a/docker/app-manager/catalog/nifi/templates/LogParserVSSource.xml
+++ b/docker/app-manager/catalog/nifi/templates/LogParserVSSource.xml
@@ -242,7 +242,7 @@
                 <properties>
                     <entry>
                         <key>bootstrap.servers</key>
-                        <value>${sink_broker_url}</value>
+                        <value>#{sink_broker_url}</value>
                     </entry>
                     <entry>
                         <key>security.protocol</key>
@@ -279,7 +279,7 @@
                     </entry>
                     <entry>
                         <key>topic</key>
-                        <value>${sink_topic}</value>
+                        <value>#{sink_topic}</value>
                     </entry>
                     <entry>
                         <key>acks</key>
@@ -526,7 +526,7 @@
                 <properties>
                     <entry>
                         <key>bootstrap.servers</key>
-                        <value>${source_broker_url}</value>
+                        <value>#{source_broker_url}</value>
                     </entry>
                     <entry>
                         <key>security.protocol</key>
@@ -563,7 +563,7 @@
                     </entry>
                     <entry>
                         <key>topic</key>
-                        <value>${source_topics}</value>
+                        <value>#{source_topics}</value>
                     </entry>
                     <entry>
                         <key>topic_type</key>
@@ -575,7 +575,7 @@
                     </entry>
                     <entry>
                         <key>group.id</key>
-                        <value>${group_id}</value>
+                        <value>#{group_id}</value>
                     </entry>
                     <entry>
                         <key>auto.offset.reset</key>
