--- a/docker/app-manager/catalog/nifi/templates/gNMIcSource.xml
+++ b/docker/app-manager/catalog/nifi/templates/gNMIcSource.xml
@@ -483,7 +483,7 @@
                 <properties>
                     <entry>
                         <key>bootstrap.servers</key>
-                        <value>${sink_broker_url}</value>
+                        <value>#{sink_broker_url}</value>
                     </entry>
                     <entry>
                         <key>security.protocol</key>
@@ -520,7 +520,7 @@
                     </entry>
                     <entry>
                         <key>topic</key>
-                        <value>gnmic-${sink_topic}</value>
+                        <value>gnmic-#{sink_topic}</value>
                     </entry>
                     <entry>
                         <key>topic_type</key>
@@ -710,11 +710,11 @@
                 <properties>
                     <entry>
                         <key>Command</key>
-                        <value>${command}</value>
+                        <value>#{command}</value>
                     </entry>
                     <entry>
                         <key>Command Arguments</key>
-                        <value>${command_arguments}</value>
+                        <value>#{command_arguments}</value>
                     </entry>
                     <entry>
                         <key>Batch Duration</key>
@@ -934,7 +934,7 @@
                 <properties>
                     <entry>
                         <key>bootstrap.servers</key>
-                        <value>${sink_broker_url}</value>
+                        <value>#{sink_broker_url}</value>
                     </entry>
                     <entry>
                         <key>security.protocol</key>
@@ -971,7 +971,7 @@
                     </entry>
                     <entry>
                         <key>topic</key>
-                        <value>${sink_topic}</value>
+                        <value>#{sink_topic}</value>
                     </entry>
                     <entry>
                         <key>acks</key>
